<resources>
    <string name="app_name">Jogjatour</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_password">Masukan Pasword</string>
    <string name="hint_email">Masukan email</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">FORGOT PASSWORD</string>
    <string name="btn_link_to_register">REGISTER</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="resetEmail">Send Email Reset Password</string>
    <string name="destination_name">Destination Name</string>
    <string name="alamat">Alamat :</string>
    <string name="address">Address</string>
    <string name="detail">detail</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="daftar">DAFTAR</string>
</resources>
