<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ScrollView01"
            tools:context=".ui.detail.DetailActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <RelativeLayout
                android:id="@+id/atas"
                android:layout_below="@id/toolbar_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <ImageView
                    android:id="@+id/image"
                    android:src="@mipmap/ic_launcher"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:layout_height="180dp"/>


            <TextView
                    android:id="@+id/tv_address"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"/>

            <TextView
                    android:id="@+id/address_detail"
                    android:layout_below="@id/image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/address"
                    android:layout_marginStart="60dp"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_below="@id/atas"
                android:layout_margin="20dp"
                android:background="@drawable/border2"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/destination_name_detail"
                    android:textSize="16sp"
                    android:paddingStart="15dp"
                    android:fontFamily="thoma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination_name"
                    android:textStyle="bold"/>

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                    android:id="@+id/detail"
                    android:layout_below="@id/destination_name_detail"
                    android:fontFamily="tahoma"
                    android:text="@string/detail"
                    android:textSize="16sp"
                    android:padding="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btn_lokasi"
                    android:layout_below="@id/detail"
                    android:layout_centerInParent="true"
                    android:text="@string/lihat_lokasi"
                    android:textColor="@color/white_three"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="100dp"
                    android:layout_height="50dp"/>
        </RelativeLayout>

        <LinearLayout
                android:id="@+id/loadings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone">

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>